<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/accessibility_parley_header"
                android:scaleType="centerCrop"
                android:src="@drawable/activity_identifier_header" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/activity_identifier_logo" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_big"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/identifier_hello"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/montserrat"
                android:text="@string/identifier_enter_your_own_identifier"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/identifier_edit_text"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/default_identifier"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="20" />

            <EditText
                android:id="@+id/customer_id_edit_text"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                android:hint="@string/default_customer_id"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="20" />

            <!-- Flow: Default -->

            <LinearLayout
                android:id="@+id/flow_default_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin">

                    <Button
                        android:id="@+id/default_start_button"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/identifier_open_then_start" />

                    <ProgressBar
                        android:id="@+id/default_start_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:indeterminateTint="@color/colorWhite"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>
            </LinearLayout>

            <!-- Flow: Lightweight -->

            <LinearLayout
                android:id="@+id/flow_lightweight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin">

                    <Button
                        android:id="@+id/lightweight_setup"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/identifier_lightweight_setup" />

                    <ProgressBar
                        android:id="@+id/lightweight_setup_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:indeterminateTint="@color/colorWhite"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_small">

                    <Button
                        android:id="@+id/lightweight_open"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/identifier_lightweight_open" />

                    <ProgressBar
                        android:id="@+id/lightweight_open_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:indeterminateTint="@color/colorWhite"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_small">

                    <Button
                        android:id="@+id/lightweight_register_device"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/identifier_lightweight_register_device" />

                    <ProgressBar
                        android:id="@+id/lightweight_register_device_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:indeterminateTint="@color/colorWhite"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_small">

                    <Button
                        android:id="@+id/lightweight_get_unseen"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/identifier_lightweight_get_unseen" />

                    <ProgressBar
                        android:id="@+id/lightweight_get_unseen_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:indeterminateTint="@color/colorWhite"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>